Add redirecting accelerators from bubbles to anchor widget

Fix keyboard shortcuts not working when bubble is opened. If accelerator
is registered for anchor widget, focus manager sends
accelerators not handled by bubble to anchor.

Bug: 866878

Change-Id: I450bb80afd6135417c35865a8f2d0544d423df79
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2141976
Commit-Queue: Olesia Marukhno <olesiamarukhno@google.com>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#767739}